--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,13 @@
 <section class="container container-about">
     <div class="row">
         <div class="col-md-12">
-            <h1>About</h1>
+            <h1>Sobre</h1>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est diam, porttitor et arcu at, vehicula
+                sodales libero. Sed fermentum luctus dapibus. Proin lobortis ipsum eu lobortis luctus.
+            </p>
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
