--- a/_includes/contacts.html
+++ b/_includes/contacts.html
@@ -2,18 +2,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Contacts</h1>
+                <h1>Contato</h1>
             </div>
             <div class="col-md-6 col-sm-12 container-contacts-phone">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <a href="mailto:{{ site.email }}">
                     {{ site.email }}
-                </a>
-            </div>
-            <div class="col-md-6 col-sm-12 container-contacts-phone">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <a href="tel:{{ site.phone }}">
-                    {{ site.phone }}
                 </a>
             </div>
         </div>
