--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,21 +5,19 @@
         </div>
         <div class="col-sm-12 col-md-12">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est diam, porttitor et arcu at, vehicula
-                sodales libero. Sed fermentum luctus dapibus. Proin lobortis ipsum eu lobortis luctus.
+                O que um elemento que compõe um sistema vivo pode fazer para catalizar a <b>regeneração</b> desse sistema? Isso é, qual é a influência que cada um de nós temos na <a href="https://www.youtube.com/watch?v=fjnmpRMAhEk">Emergência </a> de ondas regenerativas no nosso planeta? São essas as perguntas que guiam nossos fluxos da Terra.
             </p>
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est diam, porttitor et arcu at, vehicula
-                sodales libero. Sed fermentum luctus dapibus. Proin lobortis ipsum eu lobortis luctus.
+                <h1>Sustentar já não basta</h1>
+                O século XXI se inicia com a promessa da Sustentabilidade como solução para as crises ecológicas que caracterizam o Antropoceno. Porém, hoje já é notável que esta promessa não será cumprida. Por isso uma nova abordagem é necessária. Uma que seja mais profunda na sua percepção sobre os reais problemas do século. E que só então comece a fluir soluções.
             </p>
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
-                Donec elementum orci dui, eu euismod sem pellentesque sit amet. Nunc tempus consequat urna, vel
-                consectetur odio mattis id. Nam nisi sem, tincidunt id risus et, auctor lacinia nulla. In hac habitasse
-                platea dictumst.
+                <h1>É preciso reconectar-se</h1>
+                Quando não nos reconhecemos como parte do sistema vivo do qual fazemos parte - Gaia - passamos a agir de forma inconsequente e danosa a nós mesmos. Por isso é importante a reconexão com a essência da nossa natureza. A partir daí, temos clareza e energia para fazer fluir todo tipo de energia necessária para regenearação... de nós mesmos, de nossas comunidades e nosso lar.
             </p>
         </div>
     </div>
