--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
 <section class="container container-about">
     <div class="row">
         <div class="col-md-12">
-            <h1>Sobre</h1>
+            <h1>O que?</h1>
         </div>
         <div class="col-sm-12 col-md-12">
             <p>
@@ -11,13 +11,19 @@
         <div class="col-sm-12 col-md-6">
             <p>
                 <h1>Sustentar já não basta</h1>
-                O século XXI se inicia com a promessa da Sustentabilidade como solução para as crises ecológicas que caracterizam o Antropoceno. Porém, hoje já é notável que esta promessa não será cumprida. Por isso uma nova abordagem é necessária. Uma que seja mais profunda na sua percepção sobre os reais problemas do século. E que só então comece a fluir soluções.
+                O século XXI se inicia com a promessa da Sustentabilidade como solução para as crises ecológicas que caracterizam o Antropoceno. Contudo, hoje já é evidente que esta promessa não será cumprida. Por isso uma nova abordagem é necessária. Uma que seja mais profunda na sua percepção sobre os reais pilares dessa crise. E que só então comece a fluir soluções.
             </p>
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
                 <h1>É preciso reconectar-se</h1>
-                Quando não nos reconhecemos como parte do sistema vivo do qual fazemos parte - Gaia - passamos a agir de forma inconsequente e danosa a nós mesmos. Por isso é importante a reconexão com a essência da nossa natureza. A partir daí, temos clareza e energia para fazer fluir todo tipo de energia necessária para regenearação... de nós mesmos, de nossas comunidades e nosso lar.
+                Quando não nos reconhecemos como parte do sistema vivo do qual fazemos parte passamos a agir de forma inconsequente e danosa a nós mesmos. Por isso é importante a reconexão com a essência da nossa natureza. A partir daí, temos clareza e energia para fluir todo tipo de energia para a regenearação... de nós mesmos, de nossas comunidades e do nosso lar.
+            </p>
+        </div>
+        <div class="col-sm-12 col-md-12">
+            <p>
+                <h1>Tá, mais como participo?</h1>
+                Isso é bem mais simples do que os textos acima. Basta realizar alguma ação em prol da regeneração do planeta dentro da sua realidade e possibilidade e postar nas redes sociais com a #fluxoterra. Existem também temáticas de fluxos que estão categorizadas abaixo.
             </p>
         </div>
     </div>
