--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -2,8 +2,28 @@
     <div class="row">
         <div class="col-md-12">
             <h1>Fluxos</h1>
+            Todas as nossas ações são resultados de uma combinação de fluxos de energias (ideias, experiências, emoções, alimentos, oxigênio, etc..) que tomoram a forma e o movimento da nossa ação em um dado momento. Assim, da mesma forma que as nossas ações não começam em nós, elas também não terminam em nós. As ações Regenerativas que realizamos e pretendemos realizar, continuarão a fluir eternamente em diversas formas.
+            Aqui estão as imagens mais recentes postadas com a #fluxoterra. Elas mostram como as pessoas têm contribuido com esse movimento dentro das suas diversas realidades e possibilidades. Mais abaixo estão algumas categorias específicas de fluxos regenerativos.
         </div>
         <div class="col-md-12">
+            <!-- Generate such a widget at snapwidget.com for your name -->
+            <!-- Copy/paste code here or just update the snapwidget value at _config.yml -->
+            <script src="https://snapwidget.com/js/snapwidget.js"></script>
+            <iframe src="https://snapwidget.com/embed/{{ site.snapwidget }}" class="snapwidget-widget" allowTransparency="true"
+                    frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
+        </div>
+        <div class="col-md-12">
+            <h1>#SementeÉVida</h1>
+            Sementes não são lixo. Elas carregam o potêncial de absorver uma quantidade tremenda de CO2 da atmosfera. Elas carregam o potencial de prover morada e alimentação para uma enorme variedade espécies de animais e insetos. Elas carregam o potencial de regenera. Semeie este potencial e compartilher com a #SementeÉVida
+            <!-- Generate such a widget at snapwidget.com for your name -->
+            <!-- Copy/paste code here or just update the snapwidget value at _config.yml -->
+            <script src="https://snapwidget.com/js/snapwidget.js"></script>
+            <iframe src="https://snapwidget.com/embed/{{ site.snapwidget }}" class="snapwidget-widget" allowTransparency="true"
+                    frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
+        </div>
+        <div class="col-md-12">
+            <h1>#LixoÉFluxoParado</h1>
+            Tudo o que entendemos como Lixo hoje em dia nada mais é do que um fluxo potencial que foi impedido de fluir. Como você reage ao descaso com esse fluxo? E quando ele é estagnado em áreas que são berços regenerativos? Compartilhe suas ações que dão um pouco mais de fluxo ao "lixo" com #LixoÉFluxoParado"
             <!-- Generate such a widget at snapwidget.com for your name -->
             <!-- Copy/paste code here or just update the snapwidget value at _config.yml -->
             <script src="https://snapwidget.com/js/snapwidget.js"></script>
