--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
-                <h1>É preciso reconectar-se</h1>
+                <h1>É preciso Despertar</h1>
                 Quando não nos reconhecemos como parte do sistema vivo do qual fazemos parte passamos a agir de forma inconsequente e danosa a nós mesmos. Por isso é importante a reconexão com a essência da nossa natureza. A partir daí, temos clareza e energia para fluir todo tipo de energia para a regenearação... de nós mesmos, de nossas comunidades e do nosso lar.
             </p>
         </div>
