--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col-sm-12 col-md-12">
             <p>
-                <h1>Tá, mais como participo?</h1>
+                <h1>Tá, mas como participo?</h1>
                 Isso é bem mais simples do que os textos acima. Basta realizar alguma ação em prol da regeneração do planeta dentro da sua realidade e possibilidade e postar nas redes sociais com a #fluxoterra. Existem também temáticas de fluxos que estão categorizadas abaixo.
             </p>
         </div>
