--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,8 +5,11 @@
         </div>
         <div class="col-sm-12 col-md-12">
             <p>
-                O que um elemento que compõe um sistema vivo pode fazer para catalizar a <b>regeneração</b> desse sistema? Isso é, qual é a influência que cada um de nós temos na <a href="https://www.youtube.com/watch?v=fjnmpRMAhEk">Emergência </a> de ondas regenerativas no nosso planeta? São essas as perguntas que guiam nossos fluxos da Terra.
+                O que um elemento que compõe um sistema vivo pode fazer para catalizar a <b>regeneração</b> desse sistema? Isso é, qual é a influência que cada um de nós temos na <a href="https://www.youtube.com/watch?v=fjnmpRMAhEk">Emergência </a> de ondas regenerativas no nosso planeta? São essas as perguntas que guiam os fluxos do Fluxo Terra.
             </p>
+        <div class="col-sm-12 col-md-12">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ae_zebmglwM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
